--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ script:
 jdk:
   - oraclejdk8
 after_success:
-  - mvn clean test jacoco:report coveralls:report
+  - bash <(curl -s https://codecov.io/bash)
