--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.7.7.201606060606</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*CSVToJSON.*</exclude>
+						<exclude>**/*Main.*</exclude>
+						<exclude>**/*tests/*</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
